# ftp-server-rust

./: .gitignore  README.md
ftp-server/: Cargo.toml  launch-ftp.sh
ftp-server/.cargo/: config.toml
ftp-server/fake_server/: README.md  main.py  pyproject.toml
ftp-server/src/: client.rs  commands.rs  errors.rs  listener.rs  main.rs  user_session.rs
ftp-server/tests/: commands_test.rs
src/: ftp_responses.rs
tests/: client_test.rs
